--- a/example/manifest.json
+++ b/example/manifest.json
@@ -23,5 +23,5 @@
     "orientation": "landscape",
     "start_url": "https://live.congrea.net/virtualclass/example/index1.php?id=55&role=s&name=suman&room=4000&play=false&themecolor=gray&pushtotalk=1&anyonepresenter=0#",
     "scope": ".",
-    "theme_color": "#3367D6"
+    "theme_color": "#021317"
   }
