--- a/manifest.json
+++ b/manifest.json
@@ -1,27 +1,29 @@
 {
     "short_name": "Congrea",
-    "name": "Udit's Congrea",
     "icons": [
       {
-        "src": "https://live.congrea.net/virtualclass/images/maskable_icon144x144.png",
+        "src": "https://live.congrea.net/virtualclass/images/Congrea144x144.png",
         "type": "image/png",
-        "sizes": "144x144"
+        "sizes": "144x144",
+        "purpose": "any maskable"
       },
       {
-        "src": "https://live.congrea.net/virtualclass/images/maskable_icon192x192.png",
+        "src": "https://live.congrea.net/virtualclass/images/Congrea192x192.png",
         "type": "image/png",
-        "sizes": "192x192"
+        "sizes": "192x192",
+        "purpose": "any maskable"
       },
       {
-        "src": "/virtualclass/images/maskable_icon512x512.png",
+        "src": "https://live.congrea.net/virtualclass/images/Congrea512x512.png",
         "type": "image/png",
-        "sizes": "512x512"
+        "sizes": "512x512",
+        "purpose": "any maskable"
       }
     ],
-    "background_color": "#3367D6",
+    "background_color": "#141a2f",
     "display": "fullscreen",
     "orientation": "landscape",
     "start_url": "/virtualclass/",
     "scope": ".",
-    "theme_color": "#021317"
+    "theme_color": "#141a2f"
   }
